SF-Custom-Objects/salesforce_ant_46.0/sample/retrieveUnpackaged/objects/OCEAN_Ec2Instance__c.object
<CustomObject>
    <fields>
        <fullName>ADO_FUNDING_TYPE__c</fullName>
        <label>Funding Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>OnDemand</fullName>
                    <default>true</default>
                    <label>OnDemand</label>
                </value>
                <value>
                    <fullName>Standard, Reserved, 3yr, Partial Upfront</fullName>
                </value>
                <value>
                    <fullName>Standard, Reserved, 3yr, No Upfront</fullName>
                </value>
                <value>
                    <fullName>Standard, Reserved, 3yr, All Upfront</fullName>
                </value>
                <value>
                    <fullName>Standard, Reserved, 1yr, Partial Upfront</fullName>
                </value>
                <value>
                    <fullName>Standard, Reserved, 1yr, No Upfront</fullName>
                </value>
                <value>
                    <fullName>Standard, Reserved, 1yr, All Upfront</fullName>
                </value>
                <value>
                    <fullName>Convertible, Reserved, 3yr, Partial Upfront</fullName>
                </value>
                <value>
                    <fullName>Convertible, Reserved, 3yr, No Upfront</fullName>
                </value>
                <value>
                    <fullName>Convertible, Reserved, 3yr, All Upfront</fullName>
                </value>
                <value>
                    <fullName>Convertible, Reserved, 1yr, Partial Upfront</fullName>
                </value>
                <value>
                    <fullName>Convertible, Reserved, 1yr, No Upfront</fullName>
                </value>
                <value>
                    <fullName>Convertible, Reserved, 1yr, All Upfront</fullName>
                </value>
                <value>
                    <fullName>1 Yr All Upfront Convertible</fullName>
                    <isActive>false</isActive>
                    <label>1 Yr All Upfront Convertible</label>
                </value>
                <value>
                    <fullName>1 Yr All Upfront Reserved</fullName>
                    <isActive>false</isActive>
                    <label>1 Yr All Upfront Reserved</label>
                </value>
                <value>
                    <fullName>1 Yr No Upfront Convertible</fullName>
                    <isActive>false</isActive>
                    <label>1 Yr No Upfront Convertible</label>
                </value>
                <value>
                    <fullName>1 Yr No Upfront Reserved</fullName>
                    <isActive>false</isActive>
                    <label>1 Yr No Upfront Reserved</label>
                </value>
                <value>
                    <fullName>1 Yr Partial Upfront Convertible</fullName>
                    <isActive>false</isActive>
                    <label>1 Yr Partial Upfront Convertible</label>
                </value>
                <value>
                    <fullName>1 Yr Partial Upfront Reserved</fullName>
                    <isActive>false</isActive>
                    <label>1 Yr Partial Upfront Reserved</label>
                </value>
                <value>
                    <fullName>Convertible Reserved</fullName>
                    <isActive>false</isActive>
                    <label>Convertible Reserved</label>
                </value>
                <value>
                    <fullName>On-Demand</fullName>
                    <isActive>false</isActive>
                    <label>On-Demand</label>
                </value>
                <value>
                    <fullName>Standard Reserved</fullName>
                    <isActive>false</isActive>
                    <label>Standard Reserved</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADO_Notes__c</fullName>
        <label>ADO Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AWS_Accounts__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>AWS Accounts</label>
        <referenceTo>AWS_Accounts__c</referenceTo>
        <relationshipLabel>OCEAN_Ec2Instances</relationshipLabel>
        <relationshipName>OCEAN_Ec2Instances</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AWS_Availability_Zone__c</fullName>
        <label>AWS Availability Zone</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EastVA_AZLookup</fullName>
                </value>
                <value>
                    <fullName>WestOR_AZlookup</fullName>
                </value>
                <value>
                    <fullName>us-east-1x</fullName>
                </value>
                <value>
                    <fullName>us-east-1y</fullName>
                </value>
                <value>
                    <fullName>us-east-1z</fullName>
                </value>
                <value>
                    <fullName>us-west-1x</fullName>
                </value>
                <value>
                    <fullName>us-west-1y</fullName>
                </value>
                <value>
                    <fullName>us-west-1z</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AWS_Region__c</fullName>
        <label>AWS Region</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>US East (N. Virginia)</fullName>
                    <default>true</default>
                    <label>US East (N. Virginia)</label>
                </value>
                <value>
                    <fullName>US West (Oregon)</fullName>
                </value>
                <value>
                    <fullName>US-East/US-Standard (Virginia)</fullName>
                    <isActive>false</isActive>
                    <label>US-East/US-Standard (Virginia)</label>
                </value>
                <value>
                    <fullName>US-West-2 (Oregon)</fullName>
                    <isActive>false</isActive>
                    <label>US-West-2 (Oregon)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_Component__c</fullName>
        <label>Application Component</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CSP_Option_Year__c</fullName>
        <label>CSP Option Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Calculated_Cost__c</fullName>
        <label>Calculated Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cloud_Resource_Projection__c</fullName>
        <label>Cloud Resource Projection</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EC2_Instance_Type__c</fullName>
        <inlineHelpText>The type of instances you expect to launch with this configuration.</inlineHelpText>
        <label>EC2 Instance Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>t1.micro</fullName>
                </value>
                <value>
                    <fullName>t2.nano</fullName>
                </value>
                <value>
                    <fullName>t2.micro</fullName>
                </value>
                <value>
                    <fullName>t2.small</fullName>
                </value>
                <value>
                    <fullName>t2.medium</fullName>
                </value>
                <value>
                    <fullName>t2.large</fullName>
                </value>
                <value>
                    <fullName>t2.xlarge</fullName>
                </value>
                <value>
                    <fullName>t2.2xlarge</fullName>
                </value>
                <value>
                    <fullName>m4.large</fullName>
                </value>
                <value>
                    <fullName>m4.xlarge</fullName>
                </value>
                <value>
                    <fullName>m4.2xlarge</fullName>
                </value>
                <value>
                    <fullName>m4.4xlarge</fullName>
                </value>
                <value>
                    <fullName>m4.10xlarge</fullName>
                </value>
                <value>
                    <fullName>m4.16xlarge</fullName>
                </value>
                <value>
                    <fullName>m5.large</fullName>
                </value>
                <value>
                    <fullName>m5.xlarge</fullName>
                </value>
                <value>
                    <fullName>m5.2xlarge</fullName>
                </value>
                <value>
                    <fullName>m5.4xlarge</fullName>
                </value>
                <value>
                    <fullName>m5.12xlarge</fullName>
                </value>
                <value>
                    <fullName>m5.24xlarge</fullName>
                </value>
                <value>
                    <fullName>m3.medium</fullName>
                </value>
                <value>
                    <fullName>m3.large</fullName>
                </value>
                <value>
                    <fullName>m3.xlarge</fullName>
                </value>
                <value>
                    <fullName>m3.2xlarge</fullName>
                </value>
                <value>
                    <fullName>c5.large</fullName>
                </value>
                <value>
                    <fullName>c5.xlarge</fullName>
                </value>
                <value>
                    <fullName>c5.2xlarge</fullName>
                </value>
                <value>
                    <fullName>c5.4xlarge</fullName>
                </value>
                <value>
                    <fullName>c5.9xlarge</fullName>
                </value>
                <value>
                    <fullName>c5.18xlarge</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Environment__c</fullName>
        <label>Environment</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Ocean_Environment</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estimated_Cost__c</fullName>
        <label>Estimated Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Instance_Quantity__c</fullName>
        <inlineHelpText>The number of instances you expect to launch with this configuration.</inlineHelpText>
        <label>Instance Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ocean_Request_Id__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>OCEAN Request ID that this instance is tied to</inlineHelpText>
        <label>OCEAN_REQUEST</label>
        <referenceTo>Ocean_Request__c</referenceTo>
        <relationshipName>OCEAN_Ec2Instances</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PerInstanceUptimePerDay__c</fullName>
        <inlineHelpText>The number of hours you expect the instances to run in a day.</inlineHelpText>
        <label>Per Instance Running Hours/Day</label>
        <precision>7</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PerInstanceUptimePerMonth__c</fullName>
        <inlineHelpText>The number of days you expect the instances to run in a month.</inlineHelpText>
        <label>Per Instance Running Days/Month</label>
        <precision>7</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Per_Instance_Running_Months_in_Remaining__c</fullName>
        <inlineHelpText>The number of months you expect the instances to run in a year.</inlineHelpText>
        <label>Number of Months Requested</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <label>Platform</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Linux, SQL Std</fullName>
                </value>
                <value>
                    <fullName>Linux, SQL Ent</fullName>
                </value>
                <value>
                    <fullName>Linux, SQL Web</fullName>
                </value>
                <value>
                    <fullName>RHEL</fullName>
                </value>
                <value>
                    <fullName>SUSE</fullName>
                </value>
                <value>
                    <fullName>Windows, SQL Ent</fullName>
                </value>
                <value>
                    <fullName>Windows, SQL Std</fullName>
                </value>
                <value>
                    <fullName>Windows, SQL Web</fullName>
                </value>
                <value>
                    <fullName>Linux</fullName>
                    <isActive>false</isActive>
                    <label>Linux</label>
                </value>
                <value>
                    <fullName>Windows</fullName>
                    <isActive>false</isActive>
                    <label>Windows</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resource_Status__c</fullName>
        <label>Resource Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Discontinuation</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Under Review</fullName>
                </value>
                <value>
                    <fullName>Unapproved</fullName>
                </value>
                <value>
                    <fullName>Continuation</fullName>
                    <isActive>false</isActive>
                    <label>Continuation</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tenancy__c</fullName>
        <label>Tenancy</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Ocean_Tenancy</valueSetName>
        </valueSet>
    </fields>
    <label>OCEAN EC2 Instance</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EC2-{0000}</displayFormat>
        <label>EC2 Request ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OCEAN_Ec2Instances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Instance_Quantity_rule</fullName>
        <active>true</active>
        <errorConditionFormula>Instance_Quantity__c &lt; 0</errorConditionFormula>
        <errorDisplayField>Instance_Quantity__c</errorDisplayField>
        <errorMessage>Instance quantity must be greater than 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Instance_Running_Per_Day</fullName>
        <active>true</active>
        <errorConditionFormula>OR((PerInstanceUptimePerDay__c &lt;= 0),( PerInstanceUptimePerDay__c &gt;24))</errorConditionFormula>
        <errorDisplayField>PerInstanceUptimePerDay__c</errorDisplayField>
        <errorMessage>Enter only numbers between 0 and 24</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Instance_Running_Per_Month</fullName>
        <active>true</active>
        <errorConditionFormula>OR((PerInstanceUptimePerMonth__c &lt;= 0),( PerInstanceUptimePerMonth__c &gt; 31))</errorConditionFormula>
        <errorDisplayField>PerInstanceUptimePerMonth__c</errorDisplayField>
        <errorMessage>Enter only numbers between 0 and 31</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Number_of_months_requested</fullName>
        <active>true</active>
        <errorConditionFormula>OR((Per_Instance_Running_Months_in_Remaining__c &lt;=0),( Per_Instance_Running_Months_in_Remaining__c  &gt; 12))</errorConditionFormula>
        <errorDisplayField>Per_Instance_Running_Months_in_Remaining__c</errorDisplayField>
        <errorMessage>Enter only numbers between 0 and 12</errorMessage>
    </validationRules>
</CustomObject>